# MariBot

./: .env.template  .gitignore  .pdm-python  README.md  bot.py  pyproject.toml
mari/plugins/nonebot-plugin-coderun/: __init__.py  runcode.py
mari/plugins/nonebot-plugin-yesman/: __init__.py  agree.txt  config.py
mari/plugins/nonebot_plugin_dify/: __init__.py  config.py
mari/plugins/nonebot_plugin_learning_chat/: config.py  handler.py  web_api.py  web_page.py
mari/plugins/nonebot_plugin_moyu/: __init__.py
mari/plugins/nonebot_plugin_setu_now/: __init__.py  config.py  data_source.py
mari/plugins/nonebot_plugin_word_bank2/: __init__.py
