[project]
name = "MariBot"
version = "0.1.0"
description = "Default template for PDM package"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Azusa", email = "naotosaka@126.com"},
]
dependencies = [
    "nonebot2[fastapi]>=2.3.3",
    "nonebot-adapter-onebot>=2.4.4",
    "nonebot-adapter-console>=0.6.0",
    "nonebot-plugin-alconna>=0.52.1",
]
license = {text = "GPLv3"}

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "Console", module_name = "nonebot.adapters.console" }
]
plugins = ["nonebot_plugin_alconna", "nonebot_plugin_status"]
plugin_dirs = ["mari/plugins"]
builtin_plugins = ["echo"]

[tool.pdm]
distribution = false
