[project]
name = "MariBot"
version = "0.1.0"
description = "Default template for PDM package"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Azusa", email = "naotosaka@126.com"},
]
dependencies = [
    "nonebot2[fastapi]>=2.3.3",
    "nonebot-adapter-onebot>=2.4.4",
    "nonebot-adapter-console>=0.6.0",
    "nonebot-plugin-alconna>=0.52.1",
    "nonebot-plugin-status>=0.8.1",
    "httpx[http2]>=0.27.2",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-questionmark>=0.4.1",
    "nonebot-plugin-sayoroll>=1.0.5",
    "python-jose>=3.3.0",
    "nonebot-plugin-tortoise-orm>=0.1.4",
    "ruamel-yaml-clib>=0.2.8",
    "ruamel-yaml>=0.18.6",
    "jieba-fast>=0.53",
    "pydantic==2.8.2",
    "amis-python @ file:///${PROJECT_ROOT}/packages/amis_python-2.0.0-py3-none-any.whl",
    "nonebot-plugin-emojimix>=0.4.0",
]
license = {text = "GPLv3"}

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
#    { name = "Console", module_name = "nonebot.adapters.console" }
]
plugins = [
    "nonebot_plugin_alconna",
    "nonebot_plugin_status",
    "nonebot_plugin_localstore",
    "nonebot_plugin_questionmark",
    "nonebot_plugin_sayoroll",
    "nonebot_plugin_emojimix",
]
plugin_dirs = ["mari/plugins"]
builtin_plugins = ["echo"]

[tool.pdm]
distribution = false
